<resources>
    <string name="app_name">movieApp</string>
    <string name="imageView">imageView</string>
    <string name="floatingactionbutton">floatingactionbutton</string>
    <string name="textview">textView</string>
    <string name="best_popular_movies">Best popular movies</string>
    <string name="simple_desciption">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Bibendum at varius vel pharetra vel turpis nunc eget. Etiam sit amet nisl purus in mollis. Massa id neque aliquam vestibulum morbi. Tristique magna sit amet purus gravida quis blandit turpis cursus. Dolor sit amet consectetur adipiscing elit duis tristique sollicitudin. Mauris rhoncus aenean vel elit scelerisque mauris. Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque. Netus et malesuada fames ac turpis egestas. Semper feugiat nibh sed pulvinar proin gravida hendrerit. Tristique nulla aliquet enim tortor at auctor. Volutpat diam ut venenatis tellus in metus vulputate.</string>
    <string name="cast">Cast</string>
    <string name="popular_this_week">Popular This Week</string>
    <string name="connection_problem">Connection Problem!</string>
    <string name="rating">Rating :</string>
    <string name="_8_10">8/10</string>
    <string name="release_date">Release date:</string>
    <string name="recommend_for_you">Recommend For You</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="no_trailers_for_this_movies">No trailers for this movies</string>
    <string name="latest_movies">Latest movies</string>
    <string name="top_rated">Top Rated</string>
    <string name="now_playing_movies">Now playing movies</string>
    <string name="back_to_home">Back to home</string>
    <string name="see_more">See more…</string>
    <string name="movieapp">MovieApp</string>
    <string name="search_movies">Search Movies</string>
    <string name="not_found">Not found!</string>
    <string name="overview">Overview</string>
    <string name="images_and_posters">Images and Posters</string>
    <string name="also_known_as">Also known as:</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="place_of_birth">Place of birth:</string>
    <string name="death_day">Death Day:</string>
    <string name="department">Department:</string>
    <string name="homepage">HomePage:</string>
    <string name="biography">Biography:</string>
    <string name="profile_images">Profile Images:</string>
    <string name="by_movies">By Movies</string>
    <string name="by_person">By Person</string>
    <string name="no_more_video_results_found">No More Video Results Found…</string>
</resources>